fix: horizontal scroll on certification page

--- a/src/style/scss/components/_modal.scss
+++ b/src/style/scss/components/_modal.scss
@@ -8,6 +8,7 @@
   box-shadow: var(--box-shadow);
   text-align: center;
   // padding-bottom: 3.2rem;
+
   padding-bottom: 3.2rem;
   border: 1px solid var(--background);
   display: grid;
@@ -82,6 +83,7 @@
   .tags {
     grid-area: tags;
     max-height: none;
+    padding: 0rem 1.6rem;
   }
 
   .btn-close {
