--- a/src/style/scss/components/_nav.scss
+++ b/src/style/scss/components/_nav.scss
@@ -54,8 +54,8 @@ nav {
       }
       &.active {
         color: var(--secondary);
-        font-size: 2.5rem;
-        letter-spacing: 0.5rem;
+        // font-size: 2.5rem;
+        letter-spacing: 0.4rem;
       }
 
       &::after {
